--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-direction: row-reverse;
   padding: 10px 30px;
 }
 
