--- a/style.css
+++ b/style.css
@@ -185,6 +185,20 @@ nav ul li a:hover {
   color: #ffffff;
 }
 
+.logo-title {
+  font-family: 'Amiri', serif;
+  font-size: 2.2rem;
+  color: #441431;
+  margin-bottom: 10px;
+}
+
+.main-description {
+  font-size: 0.9rem;
+  font-family: 'Tajawal', sans-serif;
+  color: #441431;
+  margin-bottom: 20px;
+}
+
 /* Home Section */
 .home-section {
   height: 100vh;
