--- a/style.css
+++ b/style.css
@@ -272,3 +272,50 @@ nav ul li a:hover {
     font-size: 36px;
   }
 }
+
+.portfolio-section {
+  background-color: #B8ADAB;
+  padding: 60px 20px;
+  text-align: center;
+}
+
+.portfolio-title {
+  font-family: 'Amiri', serif;
+  font-size: 2.5rem;
+  color: #50183A;
+  margin-bottom: 10px;
+}
+
+.portfolio-subtitle {
+  font-family: 'Amiri', serif;
+  font-size: 1.1rem;
+  color: #DCDDD1;
+  margin-bottom: 40px;
+}
+
+.portfolio-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.portfolio-card {
+  background-color: rgba(68, 20, 49, 0.5); /* لون + شفافية */
+  border-radius: 10%;
+  padding: 20px;
+  width: 250px;
+  text-align: center;
+}
+
+.portfolio-card img {
+  width: 100%;
+  border-radius: 10%;
+  margin-bottom: 10px;
+}
+
+.portfolio-card p {
+  font-family: 'Amiri', serif;
+  font-size: 0.9rem;
+  color: #DCDDD1;
+}
