--- a/style.css
+++ b/style.css
@@ -192,15 +192,10 @@ body {
   color: #DCDDD1;
   font-family: 'Amiri', serif;
   font-size: 0.9rem;
-  padding: 15px 20px;
-  border-radius: 50%;
-  width: 100px;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  padding: 10px 25px;
+  border-radius: 30px; /* شكل الزر Sign up */
+  border: none;
   cursor: pointer;
-  text-align: center;
   transition: 0.3s ease;
 }
 
