--- a/services.css
+++ b/services.css
@@ -53,7 +53,7 @@ body {
   padding: 10px;
   font-family: 'Amiri', serif;
   border-radius: 30px;
-  margin-top: auto;
+  margin-top: 40px;
   cursor: pointer;
 }
 
