--- a/services.css
+++ b/services.css
@@ -101,3 +101,13 @@ body {
   font-family: 'Amiri', serif;
   font-size: 1rem;
 }
+
+.back-home {
+  display: block;
+  text-align: center;
+  margin-bottom: 30px;
+  font-family: 'Amiri', serif;
+  color: #441431;
+  text-decoration: none;
+  font-size: 1rem;
+}
