--- a/style.css
+++ b/style.css
@@ -465,3 +465,9 @@ margin: 20px auto 0;
   cursor: pointer;
 }
 
+.profile-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  cursor: pointer;
+}
